--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.ts"
+    "dev": "nodemon --watch . --exec node --loader ts-node/esm index.ts"
   },
   "keywords": [],
   "author": "",
